--- a/index.html
+++ b/index.html
@@ -400,12 +400,13 @@
     }
 
     /* ✅ PASTE YOUR const data = {...} HERE */
-    const data = /* PASTE YOUR DATA OBJECT HERE */ {
+    const data = {
   leaderboard: [
     {name:"Top 10 Divine Celestina", normal:13000, gold:"o/c", rainbow:"o/c", img:"https://i.postimg.cc/zbFX9yRD/10.png"},
     {name:"Top 100 Silver Emperor", normal:1200, gold:5500, rainbow:6000, img:"https://i.postimg.cc/XBN73nw9/100.png"},
     {name:"Top 250 Trophy Guardian", normal:550, gold:2300, rainbow:2500, img:"https://i.postimg.cc/5Q9N1fww/250.png"}
   ],
+
   permanent: [
     {name:"King Kraken", normal:500, gold:"1.75k", rainbow:"2k", img:"https://i.postimg.cc/c6TLh8SY/kraken.png"},
     {name:"Orca Dominator", normal:90, gold:250, rainbow:300, img:"https://i.postimg.cc/pykLCnHC/orca.png"},
@@ -414,6 +415,7 @@
     {name:"Magmasaur", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/Hj3kz7gX/magmasaur.png"},
     {name:"Raging Claw", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/NLQ0RkWL/claw.png"}
   ],
+
   limited: [
     {name:"Frosty Snowman", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/dLxtPPD1/snowman.png"},
     {name:"5M North Star", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/vZQ1nGs0/star.png"},
@@ -422,10 +424,12 @@
     {name:"Christmas Tree", normal:90, gold:400, rainbow:450, img:"https://i.postimg.cc/ct3tfT55/christmas-tree.png"},
     {name:"Gilded Seraphim", normal:1500, gold:6000, rainbow:6250, img:"https://i.postimg.cc/8jhr5KvM/seraphim.png"}
   ],
+
   mythics: [
     {name:"Sharkie", normal:2, gold:5, rainbow:10, img:"https://i.postimg.cc/mkCcYDhT/image.png"},
     {name:"Nutcracker", normal:2, gold:5, rainbow:10, img:"https://i.postimg.cc/sXztHw4H/nut.png"}
   ],
+
   exclusives: [
     {name:"Kairos", normal:80, gold:350, rainbow:400, img:"https://i.postimg.cc/XXnv9kTC/kairos.png"},
     {name:"Paradox", normal:140, gold:650, rainbow:750, img:"https://i.postimg.cc/RqGZdnBy/paradox.png"},
@@ -434,9 +438,12 @@
     {name:"Evil Snowman", normal:100, gold:300, rainbow:350, img:"https://i.postimg.cc/y3R30nrM/90.png"},
     {name:"Snow Thief", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/QK7KcSnv/80.png"},
     {name:"Celestial Candycane", normal:1000, gold:4000, rainbow:4200, img:"https://i.postimg.cc/bSnS1LBc/candy.png"},
+   umping.
     {name:"Gift Mimic", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/8FkvxRjC/75.png"},
     {name:"Christmas Goat", normal:0, gold:"o/c", rainbow:"o/c", img:"https://image-link"}
-  ];
+  ]
+};
+
 
 const TAB_CONFIG = [
   { key: "leaderboard", label: "Leaderboard Pets", accent: ["#46d6ff","#7c4dff"] },
