--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
   <title>John’s Values • Tap Simulator</title>
 
   <style>
-    /* ======= YOUR CSS (ALL IN ONE PLACE) ======= */
     :root{
       --bg:#0b0b12;
-      --panel:#121222;
-      --panel2:#17172b;
-      --card:#141427;
       --text:#ffffff;
       --muted:#b8b8c8;
       --line:rgba(255,255,255,0.08);
       --shadow: 0 18px 40px rgba(0,0,0,0.35);
       --radius:18px;
+
       --accent:#46d6ff;
       --accent2:#7c4dff;
     }
@@ -32,6 +29,7 @@
         radial-gradient(900px 700px at 60% 120%, rgba(255,210,77,0.10), transparent 55%),
         var(--bg);
     }
+
     .app{
       display:grid;
       grid-template-columns: 330px 1fr;
@@ -40,6 +38,7 @@
       max-width: 1300px;
       margin: 0 auto;
     }
+
     .sidebar{
       background: linear-gradient(180deg, rgba(18,18,34,0.9), rgba(12,12,18,0.9));
       border:1px solid var(--line);
@@ -51,6 +50,7 @@
       height: calc(100vh - 36px);
       overflow:auto;
     }
+
     .brand{
       display:flex;
       align-items:center;
@@ -60,6 +60,7 @@
       background: rgba(255,255,255,0.03);
       border:1px solid rgba(255,255,255,0.06);
     }
+
     .brandMark{
       width: 54px;
       height: 44px;
@@ -75,8 +76,10 @@
       text-transform: uppercase;
       padding: 0 8px;
     }
+
     .brandTitle{ font-size: 18px; font-weight: 900; }
     .brandSub{ margin-top: 2px; color: var(--muted); font-size: 12px; }
+
     .meta{
       margin-top: 12px;
       padding: 12px;
@@ -85,6 +88,7 @@
       border:1px solid rgba(255,255,255,0.06);
     }
     .metaLine{ color: var(--muted); font-size: 13px; }
+
     .discordBtn{
       margin-top: 10px;
       display:block;
@@ -106,6 +110,7 @@
       border:1px solid rgba(255,255,255,0.06);
     }
     .panelTitle{ font-weight: 900; margin-bottom: 10px; letter-spacing: 0.2px; }
+
     .input{
       width:100%;
       padding: 10px 12px;
@@ -116,7 +121,9 @@
       outline:none;
     }
     .hint{ margin-top: 8px; color: var(--muted); font-size: 12px; }
+
     .tabs{ display:flex; flex-direction:column; gap:8px; }
+
     .tab-btn{
       text-align:left;
       padding: 10px 12px;
@@ -133,6 +140,7 @@
       background: linear-gradient(135deg, rgba(70,214,255,0.20), rgba(124,77,255,0.16));
       border-color: rgba(70,214,255,0.35);
     }
+
     .check{
       display:flex;
       gap:10px;
@@ -167,6 +175,7 @@
       flex-direction:column;
       min-height: calc(100vh - 36px);
     }
+
     .topbar{
       padding: 16px 16px 8px 16px;
       border-bottom: 1px solid rgba(255,255,255,0.06);
@@ -174,6 +183,7 @@
     }
     .heroTitle{ font-size: 20px; font-weight: 1000; letter-spacing: 0.3px; }
     .heroSub{ margin-top: 4px; color: var(--muted); font-size: 13px; }
+
     .stats{ margin-top: 10px; display:flex; gap:10px; flex-wrap:wrap; }
     .pill{
       padding: 8px 10px;
@@ -185,12 +195,15 @@
       font-weight: 800;
     }
     .pill b{ color:white; }
+
     #content{ padding: 16px; }
+
     .pet-grid{
       display:grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 14px;
     }
+
     .pet-card{
       position: relative;
       border-radius: 20px;
@@ -199,6 +212,7 @@
       border: 1px solid rgba(255,255,255,0.08);
       overflow:hidden;
     }
+
     .pet-card::before{
       content:"";
       position:absolute;
@@ -206,7 +220,9 @@
       background: radial-gradient(500px 120px at 20% 0%, rgba(70,214,255,0.16), transparent 55%);
       pointer-events:none;
     }
+
     .petHead{ display:flex; gap: 12px; align-items:center; }
+
     .petImgWrap{
       width: 86px;
       height: 86px;
@@ -220,8 +236,10 @@
       flex: 0 0 auto;
     }
     .petImgWrap img{ width: 100%; height: 100%; object-fit: contain; }
+
     .petTitle{ text-align:left; flex: 1; }
     .petTitle h3{ margin:0; font-size: 16px; }
+
     .tagRow{ margin-top: 6px; display:flex; gap: 8px; flex-wrap:wrap; }
     .tag{
       font-size: 11px;
@@ -232,6 +250,7 @@
       color: var(--muted);
       font-weight: 900;
     }
+
     .table{ margin-top: 10px; display:grid; gap:8px; }
     .row{
       display:flex;
@@ -247,7 +266,9 @@
     .row .n{ color: white; }
     .row .g{ color: #ffd84d; }
     .row .r{ color: #a970ff; }
+
     .actions{ margin-top: 10px; display:flex; gap:10px; }
+
     .btn{
       flex:1;
       padding: 10px 12px;
@@ -261,10 +282,12 @@
       text-align:center;
     }
     .btn:hover{ background: rgba(255,255,255,0.08); }
+
     .btn.primary{
       border-color: rgba(70,214,255,0.35);
       background: linear-gradient(135deg, rgba(70,214,255,0.16), rgba(124,77,255,0.12));
     }
+
     .toast{
       position: fixed;
       bottom: 18px;
@@ -379,10 +402,13 @@
       if (v === null || v === undefined) return null;
       if (typeof v === "number") return v;
       if (typeof v !== "string") return null;
+
       const s = v.trim().toLowerCase();
       if (s === "o/c" || s === "oc") return null;
+
       const kMatch = s.match(/^(\d+(\.\d+)?)k$/);
       if (kMatch) return Math.round(parseFloat(kMatch[1]) * 1000);
+
       const n = Number(s.replace(/,/g, ""));
       return Number.isFinite(n) ? n : null;
     }
@@ -391,6 +417,7 @@
       if (v === null || v === undefined) return "—";
       if (typeof v === "string") return v;
       if (typeof v !== "number") return String(v);
+
       if (v >= 1000) {
         const k = v / 1000;
         const nice = (Math.round(k * 10) / 10).toString();
@@ -399,59 +426,51 @@
       return v.toString();
     }
 
-    /* ✅ PASTE YOUR const data = {...} HERE */
+    // ===== DATA =====
     const data = {
-  leaderboard: [
-    {name:"Top 10 Divine Celestina", normal:13000, gold:"o/c", rainbow:"o/c", img:"https://i.postimg.cc/zbFX9yRD/10.png"},
-    {name:"Top 100 Silver Emperor", normal:1200, gold:5500, rainbow:6000, img:"https://i.postimg.cc/XBN73nw9/100.png"},
-    {name:"Top 250 Trophy Guardian", normal:550, gold:2300, rainbow:2500, img:"https://i.postimg.cc/5Q9N1fww/250.png"}
-  ],
+      leaderboard: [
+        {name:"Top 10 Divine Celestina", normal:13000, gold:"o/c", rainbow:"o/c", img:"https://i.postimg.cc/zbFX9yRD/10.png"},
+        {name:"Top 100 Silver Emperor", normal:1200, gold:5500, rainbow:6000, img:"https://i.postimg.cc/XBN73nw9/100.png"},
+        {name:"Top 250 Trophy Guardian", normal:550, gold:2300, rainbow:2500, img:"https://i.postimg.cc/5Q9N1fww/250.png"}
+      ],
 
-  permanent: [
-    {name:"King Kraken", normal:500, gold:"1.75k", rainbow:"2k", img:"https://i.postimg.cc/c6TLh8SY/kraken.png"},
-    {name:"Orca Dominator", normal:90, gold:250, rainbow:300, img:"https://i.postimg.cc/pykLCnHC/orca.png"},
-    {name:"Chocolate Maurader", normal:50, gold:200, rainbow:200, img:"https://i.postimg.cc/1VR5Pypc/choco.png"},
-    {name:"Candy God", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/ct14ZdQm/candy.png"},
-    {name:"Magmasaur", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/Hj3kz7gX/magmasaur.png"},
-    {name:"Raging Claw", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/NLQ0RkWL/claw.png"}
-  ],
+      permanent: [
+        {name:"King Kraken", normal:500, gold:"1.75k", rainbow:"2k", img:"https://i.postimg.cc/c6TLh8SY/kraken.png"},
+        {name:"Orca Dominator", normal:90, gold:250, rainbow:300, img:"https://i.postimg.cc/pykLCnHC/orca.png"},
+        {name:"Chocolate Maurader", normal:50, gold:200, rainbow:200, img:"https://i.postimg.cc/1VR5Pypc/choco.png"},
+        {name:"Candy God", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/ct14ZdQm/candy.png"},
+        {name:"Magmasaur", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/Hj3kz7gX/magmasaur.png"},
+        {name:"Raging Claw", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/NLQ0RkWL/claw.png"}
+      ],
 
-  limited: [
-    {name:"Frosty Snowman", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/dLxtPPD1/snowman.png"},
-    {name:"5M North Star", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/vZQ1nGs0/star.png"},
-    {name:"5M Frost Monarch", normal:1500, gold:6000, rainbow:6250, img:"https://i.postimg.cc/8swz4rSY/monarch.png"},
-    {name:"Frost Spirit", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/56cCfdX9/frost-spitirrrr.png"},
-    {name:"Christmas Tree", normal:90, gold:400, rainbow:450, img:"https://i.postimg.cc/ct3tfT55/christmas-tree.png"},
-    {name:"Gilded Seraphim", normal:1500, gold:6000, rainbow:6250, img:"https://i.postimg.cc/8jhr5KvM/seraphim.png"}
-  ],
+      limited: [
+        {name:"Frosty Snowman", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/dLxtPPD1/snowman.png"},
+        {name:"5M North Star", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/vZQ1nGs0/star.png"},
+        {name:"5M Frost Monarch", normal:1500, gold:6000, rainbow:6250, img:"https://i.postimg.cc/8swz4rSY/monarch.png"},
+        {name:"Frost Spirit", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/56cCfdX9/frost-spitirrrr.png"},
+        {name:"Christmas Tree", normal:90, gold:400, rainbow:450, img:"https://i.postimg.cc/ct3tfT55/christmas-tree.png"},
+        {name:"Gilded Seraphim", normal:1500, gold:6000, rainbow:6250, img:"https://i.postimg.cc/8jhr5KvM/seraphim.png"}
+      ],
 
-  mythics: [
-    {name:"Sharkie", normal:2, gold:5, rainbow:10, img:"https://i.postimg.cc/mkCcYDhT/image.png"},
-    {name:"Nutcracker", normal:2, gold:5, rainbow:10, img:"https://i.postimg.cc/sXztHw4H/nut.png"}
-  ],
+      mythics: [
+        {name:"Sharkie", normal:2, gold:5, rainbow:10, img:"https://i.postimg.cc/mkCcYDhT/image.png"},
+        {name:"Nutcracker", normal:2, gold:5, rainbow:10, img:"https://i.postimg.cc/sXztHw4H/nut.png"}
+      ],
 
-  exclusives: [
-    {name:"Kairos", normal:80, gold:350, rainbow:400, img:"https://i.postimg.cc/XXnv9kTC/kairos.png"},
-    {name:"Paradox", normal:140, gold:650, rainbow:750, img:"https://i.postimg.cc/RqGZdnBy/paradox.png"},
-    {name:"Chronos", normal:10000, gold:"o/c", rainbow:"o/c", img:"https://i.postimg.cc/SjmKcfwQ/chronos.png"},
-    {name:"Krampus", normal:2000, gold:6000, rainbow:7000, img:"https://i.postimg.cc/1fpNtCFP/krampus.png"},
-    {name:"Evil Snowman", normal:100, gold:300, rainbow:350, img:"https://i.postimg.cc/y3R30nrM/90.png"},
-    {name:"Snow Thief", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/QK7KcSnv/80.png"},
-    {name:"Celestial Candycane", normal:1000, gold:4000, rainbow:4200, img:"https://i.postimg.cc/bSnS1LBc/candy.png"},
-   umping.
-    {name:"Gift Mimic", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/8FkvxRjC/75.png"},
-    {name:"Christmas Goat", normal:0, gold:"o/c", rainbow:"o/c", img:"https://image-link"}
-  ]
-};
+      exclusives: [
+        {name:"Kairos", normal:80, gold:350, rainbow:400, img:"https://i.postimg.cc/XXnv9kTC/kairos.png"},
+        {name:"Paradox", normal:140, gold:650, rainbow:750, img:"https://i.postimg.cc/RqGZdnBy/paradox.png"},
+        {name:"Chronos", normal:10000, gold:"o/c", rainbow:"o/c", img:"https://i.postimg.cc/SjmKcfwQ/chronos.png"},
+        {name:"Krampus", normal:2000, gold:6000, rainbow:7000, img:"https://i.postimg.cc/1fpNtCFP/krampus.png"},
+        {name:"Evil Snowman", normal:100, gold:300, rainbow:350, img:"https://i.postimg.cc/y3R30nrM/90.png"},
+        {name:"Snow Thief", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/QK7KcSnv/80.png"},
+        {name:"Celestial Candycane", normal:1000, gold:4000, rainbow:4200, img:"https://i.postimg.cc/bSnS1LBc/candy.png"},
+        {name:"Gift Mimic", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/8FkvxRjC/75.png"},
+        {name:"Christmas Goat", normal:0, gold:"o/c", rainbow:"o/c", img:"https://image-link"}
+      ]
+    };
 
-
-const TAB_CONFIG = [
-  { key: "leaderboard", label: "Leaderboard Pets", accent: ["#46d6ff","#7c4dff"] },
-  { key: "permanent", label: "Permanent Secrets", accent: ["#ff4d8d","#7c4dff"] },
-  { key: "limited", label: "Limited Secrets", accent: ["#54ff9b","#46d6ff"] },
-  { key: "mythics", label: "Mythics", accent: ["#ffd24d","#ff4d8d"] },
-  { key: "exclusives", label: "Exclusives", accent: ["#7c4dff","#46d6ff"] }};
-
+    // ===== TABS =====
     const TAB_CONFIG = [
       { key: "leaderboard", label: "Leaderboard Pets", accent: ["#46d6ff","#7c4dff"] },
       { key: "permanent", label: "Permanent Secrets", accent: ["#ff4d8d","#7c4dff"] },
@@ -606,6 +625,7 @@ const TAB_CONFIG = [
       render();
     }
 
+    // Controls
     el("resetBtn").addEventListener("click", () => {
       el("searchInput").value = "";
       el("sortSelect").value = "";
@@ -619,11 +639,12 @@ const TAB_CONFIG = [
     el("tradeableOnly").addEventListener("change", render);
     el("hasImageOnly").addEventListener("change", render);
 
+    // Last updated
     el("lastUpdated").textContent = new Date().toLocaleDateString();
 
+    // Init
     buildTabs();
     showTab("leaderboard");
   </script>
 </body>
 </html>
-
