--- a/index.html
+++ b/index.html
@@ -446,11 +446,11 @@
 
       limited: [
         {name:"Frosty Snowman", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/dLxtPPD1/snowman.png"},
-        {name:"5M North Star", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/vZQ1nGs0/star.png"},
-        {name:"5M Frost Monarch", normal:1500, gold:6000, rainbow:6250, img:"https://i.postimg.cc/8swz4rSY/monarch.png"},
+        {name:"5M North Star", normal:200, gold:900, rainbow:1000, img:"https://i.postimg.cc/vZQ1nGs0/star.png"},
+        {name:"5M Frost Monarch", normal:1200, gold:4500, rainbow:4750, img:"https://i.postimg.cc/8swz4rSY/monarch.png"},
         {name:"Frost Spirit", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/56cCfdX9/frost-spitirrrr.png"},
-        {name:"Christmas Tree", normal:90, gold:400, rainbow:450, img:"https://i.postimg.cc/ct3tfT55/christmas-tree.png"},
-        {name:"Gilded Seraphim", normal:1500, gold:6000, rainbow:6250, img:"https://i.postimg.cc/8jhr5KvM/seraphim.png"}
+        {name:"Christmas Tree", normal:90, gold:375, rainbow:400, img:"https://i.postimg.cc/ct3tfT55/christmas-tree.png"},
+        {name:"Gilded Seraphim", normal:900, gold:3750, rainbow:4000, img:"https://i.postimg.cc/8jhr5KvM/seraphim.png"}
       ],
 
       mythics: [
@@ -467,7 +467,7 @@
         {name:"Snow Thief", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/QK7KcSnv/80.png"},
         {name:"Celestial Candycane", normal:1000, gold:4000, rainbow:4200, img:"https://i.postimg.cc/bSnS1LBc/candy.png"},
         {name:"Gift Mimic", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/8FkvxRjC/75.png"},
-        {name:"Christmas Goat", normal:0, gold:"o/c", rainbow:"o/c", img:"https://image-link"}
+        {name:"Christmas Goat", normal:"o/c", gold:"o/c", rainbow:"o/c", img:"https://image-link"}
       ]
     };
 
