--- a/index.html
+++ b/index.html
@@ -533,12 +533,15 @@
       ],
 
       permanent: [
-        {name:"King Kraken", normal:500, gold:"1.75k", rainbow:"2k", img:"https://i.postimg.cc/c6TLh8SY/kraken.png"},
+        {name:"King Kraken", normal:150, gold:700, rainbow:750, img:"https://i.postimg.cc/c6TLh8SY/kraken.png"},
         {name:"Orca Dominator", normal:90, gold:250, rainbow:300, img:"https://i.postimg.cc/pykLCnHC/orca.png"},
         {name:"Chocolate Maurader", normal:50, gold:200, rainbow:200, img:"https://i.postimg.cc/1VR5Pypc/choco.png"},
         {name:"Candy God", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/ct14ZdQm/candy.png"},
         {name:"Magmasaur", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/Hj3kz7gX/magmasaur.png"},
-        {name:"Raging Claw", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/NLQ0RkWL/claw.png"}
+        {name:"Raging Claw", normal:50, gold:250, rainbow:300, img:"https://i.postimg.cc/NLQ0RkWL/claw.png"},
+        {name:"Luminary Star", normal:125, gold:450, rainbow:500, img:"https://i.postimg.cc/GByD2ZpT/luminary-star-watermarked.png"},
+        {name:"Cosmic Chaos", normal:475, gold:2100, rainbow:2250, img:"https://i.postimg.cc/3k6p3KYs/cosmic-star-watermarked.png"}
+    
       ],
 
       limited: [
@@ -547,25 +550,26 @@
         {name:"5M Frost Monarch", normal:1200, gold:4500, rainbow:4750, img:"https://i.postimg.cc/8swz4rSY/monarch.png"},
         {name:"Frost Spirit", normal:40, gold:80, rainbow:160, img:"https://i.postimg.cc/56cCfdX9/frost-spitirrrr.png"},
         {name:"Christmas Tree", normal:90, gold:375, rainbow:400, img:"https://i.postimg.cc/ct3tfT55/christmas-tree.png"},
-        {name:"Gilded Seraphim", normal:900, gold:3750, rainbow:4000, img:"https://i.postimg.cc/8jhr5KvM/seraphim.png"}
+        {name:"Gilded Seraphim", normal:900, gold:3750, rainbow:4000, img:"https://i.postimg.cc/8jhr5KvM/seraphim.png"},
+        {name:"2026 Baloons", normal:130, gold:500, rainbow:540, img:"https://8upload.com/image/a60ddf8525331343/balloon.png"},
+        {name:"New Year Dragon", normal:450, gold:2000, rainbow:2200, img:"https://8upload.com/image/c25a161a1aa044a2/dragon.png"},
+        {name:"2026 Overlord", normal:1350, gold:5450, rainbow:5600, img:"https://8upload.com/image/fc452cccc3817230/overlord.png"}
       ],
 
       mythics: [
-        {name:"Sharkie", normal:2, gold:5, rainbow:10, img:"https://i.postimg.cc/mkCcYDhT/image.png"},
-        {name:"Nutcracker", normal:2, gold:5, rainbow:10, img:"https://i.postimg.cc/sXztHw4H/nut.png"}
+        {name:"Starshine warrior", normal:2, gold:5, rainbow:10, img:"https://i.postimg.cc/sXztHw4H/nut.png"}
       ],
 
       exclusives: [
         {name:"Kairos", normal:80, gold:350, rainbow:400, img:"https://i.postimg.cc/XXnv9kTC/kairos.png"},
         {name:"Paradox", normal:140, gold:650, rainbow:750, img:"https://i.postimg.cc/RqGZdnBy/paradox.png"},
         {name:"Chronos", normal:10000, gold:"o/c", rainbow:"o/c", img:"https://i.postimg.cc/SjmKcfwQ/chronos.png"},
-        {name:"Krampus", normal:2000, gold:6000, rainbow:7000, img:"https://i.postimg.cc/1fpNtCFP/krampus.png"},
+        {name:"Krampus", normal:2600, gold:10,000, rainbow:10,500, img:"https://i.postimg.cc/1fpNtCFP/krampus.png"},
         {name:"Evil Snowman", normal:100, gold:300, rainbow:350, img:"https://i.postimg.cc/y3R30nrM/90.png"},
         {name:"Snow Thief", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/QK7KcSnv/80.png"},
         {name:"Celestial Candycane", normal:1000, gold:4000, rainbow:4200, img:"https://i.postimg.cc/bSnS1LBc/candy.png"},
-        {name:"Gift Mimic", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/8FkvxRjC/75.png"},
-        {name:"Christmas Goat", normal:"o/c", gold:"o/c", rainbow:"o/c", img:"https://image-link"}
-      ]
+        {name:"Gift Mimic", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/8FkvxRjC/75.png"}
+        
     };
 
     // ===== TABS =====
