--- a/index.html
+++ b/index.html
@@ -529,7 +529,10 @@
       leaderboard: [
         {name:"Top 10 Divine Celestina", normal:13000, gold:"o/c", rainbow:"o/c", img:"https://i.postimg.cc/zbFX9yRD/10.png"},
         {name:"Top 100 Silver Emperor", normal:1200, gold:5500, rainbow:6000, img:"https://i.postimg.cc/XBN73nw9/100.png"},
-        {name:"Top 250 Trophy Guardian", normal:550, gold:2300, rainbow:2500, img:"https://i.postimg.cc/5Q9N1fww/250.png"}
+        {name:"Top 250 Trophy Guardian", normal:550, gold:2300, rainbow:2500, img:"https://i.postimg.cc/5Q9N1fww/250.png"},
+        {name:"Top 10 Divine Celestina", normal:12000, gold:"o/c", rainbow:"o/c", img:"https://8upload.com/image/dcd03e3b3d3fe07e/top_10.png"},
+        {name:"Top 100 Silver Emperor", normal:1000, gold:4600, rainbow:5000, img:"https://8upload.com/image/3b5c0a07efffa9dd/top_100.png"},
+        {name:"Top 250 Trophy Guardian", normal:450, gold:1850, rainbow:1950, img:"https://8upload.com/image/d5d970cabf198b70/top_250.png"}
       ],
 
       permanent: [
@@ -557,7 +560,7 @@
       ],
 
       mythics: [
-        {name:"Starshine warrior", normal:2, gold:5, rainbow:10, img:"https://i.postimg.cc/sXztHw4H/nut.png"}
+        {name:"Starshine Warrior", normal:2, gold:5, rainbow:10, img:"https://8upload.com/image/409cbe0be76db7be/new_stat.png"}
       ],
 
       exclusives: [
@@ -568,7 +571,9 @@
         {name:"Evil Snowman", normal:100, gold:300, rainbow:350, img:"https://i.postimg.cc/y3R30nrM/90.png"},
         {name:"Snow Thief", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/QK7KcSnv/80.png"},
         {name:"Celestial Candycane", normal:1000, gold:4000, rainbow:4200, img:"https://i.postimg.cc/bSnS1LBc/candy.png"},
-        {name:"Gift Mimic", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/8FkvxRjC/75.png"}
+        {name:"Gift Mimic", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/8FkvxRjC/75.png"},
+        {name:"Hooded Krampus", normal:500, gold:2000, rainbow:2100, img:"https://i.postimg.cc/8FkvxRjC/75.png"},
+        {name:"Disco Lord", normal:1200, gold:4500, rainbow:5000, img:"https://i.postimg.cc/8FkvxRjC/75.png"}
         ]
     };
 
