--- a/index.html
+++ b/index.html
@@ -572,8 +572,8 @@
         {name:"Snow Thief", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/QK7KcSnv/80.png"},
         {name:"Celestial Candycane", normal:1000, gold:4000, rainbow:4200, img:"https://i.postimg.cc/bSnS1LBc/candy.png"},
         {name:"Gift Mimic", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/8FkvxRjC/75.png"},
-        {name:"Hooded Krampus", normal:500, gold:2000, rainbow:2100, img:"https://i.postimg.cc/8FkvxRjC/75.png"},
-        {name:"Disco Lord", normal:1200, gold:4500, rainbow:5000, img:"https://i.postimg.cc/8FkvxRjC/75.png"}
+        {name:"Hooded Krampus", normal:500, gold:2000, rainbow:2100, img:"https://i.postimg.cc/0bpJQWSS/hooded.png"},
+        {name:"Disco Lord", normal:1200, gold:4500, rainbow:5000, img:"https://8upload.com/image/49098f59873d3dc0/disco.png"}
         ]
     };
 
